dev_ws/log/build_2020-11-18_15-45-12/tallest_buildings/stderr.log
  File "H:\MyProgram\C and C++\ROS\dev_ws\install\Lib\site-packages\tallest_buildings\client.py", line 41
    break
    ^
SyntaxError: invalid syntax

